# cursor-agents

./: .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
digitalocean-agent/: README.md
docs/: BRANDING_AUDIT_TASKS.md  HUB_INDEX.md  MCP_AND_SKILLS.md  MONOREPO_V2_ROADMAP.md  PLATFORM_AGENTS.md  RETIRED_PATHS.md  RETIRED_REPOS.md  index.html
macos-platform-agent/: README.md
mastodon-agent/: CONTRIBUTING.md  README.md
mastodon-agent-cursor/: AGENTS.md  README.md
music-library-agent/: AGENTS.md
music-streaming-agent/: AGENTS.md  (+1 more)
products/music-streaming-agent/: AGENTS.md  README.md  pyproject.toml
products/music-streaming-agent/.cursor/rules/: review-merge-gates.mdc  server-side-agent.mdc
products/music-streaming-agent/ansible/: playbook.yml
products/music-streaming-agent/ansible/roles/music_agent/tasks/: main.yml
products/music-streaming-agent/ansible/roles/music_agent/templates/: music-agent.service.j2
products/music-streaming-agent/docs/: ARCHITECTURE.md  INTEGRATION.md  MIGRATION_CHECKLIST.md
products/music-streaming-agent/docs/agents/: SERVER_SIDE_AGENT.md  SOUL.md
products/music-streaming-agent/docs/ai/: CURSOR_MUSIC_BOT.md
products/music-streaming-agent/scripts/examples/: sync-external-library-into-mpd.example.sh
products/music-streaming-agent/scripts/install/: install-mpd-network-ordering.sh
products/music-streaming-agent/scripts/install/systemd/mpd.service.d/: wait-for-network.conf
products/music-streaming-agent/src/music_agent/: __main__.py  executor.py  personas.py  situation.py
(+65 files in other folders)
